# fpl

fpl/: pyproject.toml
fpl/fpl/: analyse.py
